--- a/src/ToDoListDataAPI/packages.config
+++ b/src/ToDoListDataAPI/packages.config
@@ -14,9 +14,11 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.Rest.ClientRuntime" version="0.9.6" targetFramework="net452" />
+  <package id="Microsoft.Azure.CognitiveServices.Language.TextAnalytics" version="2.8.0-preview" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.17" targetFramework="net452" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.0.0" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
