Added ML.NET. Needed to be .NET Core proj in order to predict. Not working at the moment. Work in progress...

--- a/src/ToDoListAPI/Web.config
+++ b/src/ToDoListAPI/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <appSettings>
     <add key="toDoListDataAPIURL" value="http://localhost:45914" />
+    <add key="todoListAPIURL" value="http://localhost:60146" />
     <add key="environment" value="VS Debugger" />
   </appSettings>
   <system.web>
