--- a/src/ToDoListDataAPI/packages.config
+++ b/src/ToDoListDataAPI/packages.config
@@ -15,12 +15,22 @@
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Azure.CognitiveServices.Language.TextAnalytics" version="2.8.0-preview" targetFramework="net452" />
+  <package id="Microsoft.ML" version="0.6.0" targetFramework="net461" />
+  <package id="Microsoft.ML.CpuMath" version="0.6.0" targetFramework="net461" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.17" targetFramework="net452" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Swashbuckle" version="5.0.0" targetFramework="net452" />
   <package id="Swashbuckle.Core" version="5.0.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.CodeDom" version="4.4.0" targetFramework="net461" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net461" />
   <package id="System.IdentityModel.Tokens.Jwt" version="4.0.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net461" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.8.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0.6" targetFramework="net452" />
 </packages>
