--- a/src/ToDoListDataAPI/ToDoListDataAPI.csproj
+++ b/src/ToDoListDataAPI/ToDoListDataAPI.csproj
@@ -215,26 +215,17 @@
   <ItemGroup>
     <Compile Include="AIHelpers\CognitiveServices\ApiKeyServiceClientCredentials.cs" />
     <Compile Include="AIHelpers\CognitiveServices\CognitiveServicesText.cs" />
-    <Compile Include="AIHelpers\MLNET\MLNetTextSentiment.cs" />
-    <Compile Include="AIHelpers\MLNET\ModelTrainer.cs" />
-    <Compile Include="AIHelpers\MLNET\Models\SentimentIssue.cs" />
-    <Compile Include="AIHelpers\MLNET\Models\SentimentPredicition.cs" />
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ToDoListController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ModelResponse.cs" />
     <Compile Include="Models\ToDoItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AIHelpers\MLNET\Data\wikipedia-detox-250-line-data.tsv">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AIHelpers\MLNET\Data\wikipedia-detox-250-line-test.tsv">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
